avoid flicker for border on size changes

if you type and e.g. the line count crosses the X -> XX
border without this, a short flicker will occur

BUG: 435361